[gd_scene load_steps=31 format=3 uid="uid://nyqdg4s0r6jr"]

[ext_resource type="Script" path="res://Scripts/MainScenes/Menu.gd" id="1_lkpov"]
[ext_resource type="AudioStream" uid="uid://dxsn2vwpfc331" path="res://Assets/Sounds/HadoukenTheme.mp3" id="1_xijvx"]
[ext_resource type="VideoStream" path="res://Assets/Images/HUD/Menu/TelaInicial/0000-0100.ogv" id="2_lmgxy"]
[ext_resource type="Texture2D" uid="uid://buybyke6eehpe" path="res://Assets/Images/HUD/Menu/TelaInicial/Start.png" id="7_1nvda"]
[ext_resource type="Texture2D" uid="uid://br157qi2bbxbr" path="res://Assets/Images/HUD/Menu/TelaInicial/Options.png" id="8_tls7f"]
[ext_resource type="Texture2D" uid="uid://ctwpj7crh1lsn" path="res://Assets/Images/HUD/Menu/TelaInicial/Exit Game.png" id="9_7ei3r"]
[ext_resource type="Texture2D" uid="uid://dc7sbpmqte8ae" path="res://Assets/Images/HUD/Menu/TelaInicial/Logo.png" id="10_n4uq5"]
[ext_resource type="Texture2D" uid="uid://bgr2f52noip7b" path="res://Assets/Images/HUD/Menu/TelaInicial/OptionsBG.png" id="11_f6av1"]
[ext_resource type="Texture2D" uid="uid://y4cb32e15uex" path="res://Assets/Images/HUD/Menu/TelaInicial/BgSlider.png" id="12_1jkb5"]
[ext_resource type="Texture2D" uid="uid://c850gnqtwl08x" path="res://Assets/Images/HUD/Menu/TelaInicial/Grabber.png" id="12_s5cak"]
[ext_resource type="Texture2D" uid="uid://c6s416pvvh4yw" path="res://Assets/Images/HUD/Menu/TelaInicial/slider.png" id="13_c32hl"]
[ext_resource type="FontFile" uid="uid://by6650mb11t63" path="res://Assets/Images/HUD/Menu/Zeus-Land.otf" id="15_m6jkk"]
[ext_resource type="Texture2D" uid="uid://4jsvonk3necd" path="res://Assets/Images/HUD/Menu/TelaInicial/Checked.png" id="15_tms6e"]
[ext_resource type="Texture2D" uid="uid://miwca4hddcda" path="res://Assets/Images/HUD/Menu/TelaInicial/Selected.png" id="16_yrs21"]

[sub_resource type="Animation" id="Animation_jdjnr"]
resource_name = "SlideIn"
length = 1.0001
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../StartButton:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-137, 260), Vector2(-11, 260)]
}

[sub_resource type="Animation" id="Animation_ccioi"]
resource_name = "SlideOut"
length = 1.0001
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../StartButton:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-11, 260), Vector2(-138, 260)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5iu1l"]
_data = {
"SlideIn": SubResource("Animation_jdjnr"),
"SlideOut": SubResource("Animation_ccioi")
}

[sub_resource type="Animation" id="Animation_t54oq"]
resource_name = "SlideIn"
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Options:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-137, 361), Vector2(-12, 361)]
}

[sub_resource type="Animation" id="Animation_txgvt"]
resource_name = "SlideOut"
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Options:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-12, 361), Vector2(-137, 361)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_py2bl"]
_data = {
"SlideIn": SubResource("Animation_t54oq"),
"SlideOut": SubResource("Animation_txgvt")
}

[sub_resource type="Animation" id="Animation_46gu8"]
resource_name = "SlideIn"
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../ExitGame:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-137, 459), Vector2(-12, 459)]
}

[sub_resource type="Animation" id="Animation_u6s62"]
resource_name = "SlideOut"
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../ExitGame:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-12, 459), Vector2(-137, 459)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4k0k5"]
_data = {
"SlideIn": SubResource("Animation_46gu8"),
"SlideOut": SubResource("Animation_u6s62")
}

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_m61ad"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
texture = ExtResource("12_1jkb5")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6t2id"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
texture = ExtResource("13_c32hl")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_e8gl7"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
texture = ExtResource("13_c32hl")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_e3eux"]
texture = ExtResource("12_1jkb5")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_av23h"]
texture = ExtResource("13_c32hl")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_hbgu4"]
texture = ExtResource("12_1jkb5")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_v8ren"]
texture = ExtResource("12_1jkb5")

[node name="Menu" type="Node2D"]
script = ExtResource("1_lkpov")

[node name="MenuInicial" type="Node2D" parent="."]

[node name="Videos" type="Node2D" parent="MenuInicial"]

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="MenuInicial/Videos"]
offset_right = 1030.0
offset_bottom = 606.0
stream = ExtResource("2_lmgxy")
autoplay = true
expand = true

[node name="Musica" type="AudioStreamPlayer" parent="MenuInicial"]
stream = ExtResource("1_xijvx")
volume_db = -50.0
autoplay = true

[node name="StartButton" type="TextureButton" parent="MenuInicial"]
offset_left = -137.0
offset_top = 260.0
offset_right = 378.0
offset_bottom = 339.0
focus_neighbor_bottom = NodePath("../Options")
texture_normal = ExtResource("7_1nvda")
ignore_texture_size = true
stretch_mode = 0

[node name="Options" type="TextureButton" parent="MenuInicial"]
offset_left = -137.0
offset_top = 361.0
offset_right = 378.0
offset_bottom = 440.0
focus_neighbor_top = NodePath("../StartButton")
focus_neighbor_bottom = NodePath("../ExitGame")
texture_normal = ExtResource("8_tls7f")
ignore_texture_size = true
stretch_mode = 0

[node name="ExitGame" type="TextureButton" parent="MenuInicial"]
offset_left = -137.0
offset_top = 459.0
offset_right = 378.0
offset_bottom = 538.0
focus_neighbor_top = NodePath("../Options")
texture_normal = ExtResource("9_7ei3r")
ignore_texture_size = true
stretch_mode = 0

[node name="Animations" type="Node2D" parent="MenuInicial"]

[node name="StartButtonAnimations" type="AnimationPlayer" parent="MenuInicial/Animations"]
speed_scale = 2.0
libraries = {
"": SubResource("AnimationLibrary_5iu1l")
}

[node name="OptionsButtonsAnimations" type="AnimationPlayer" parent="MenuInicial/Animations"]
speed_scale = 2.0
libraries = {
"": SubResource("AnimationLibrary_py2bl")
}

[node name="ExitButtonAnimations" type="AnimationPlayer" parent="MenuInicial/Animations"]
speed_scale = 2.0
libraries = {
"": SubResource("AnimationLibrary_4k0k5")
}

[node name="Logo" type="Sprite2D" parent="MenuInicial"]
position = Vector2(301, 162)
scale = Vector2(0.66309, 0.733831)
texture = ExtResource("10_n4uq5")

[node name="OptionsMenu" type="Node2D" parent="."]
visible = false

[node name="OptionsBG" type="Sprite2D" parent="OptionsMenu"]
position = Vector2(500, 300)
scale = Vector2(0.55, 0.55)
texture = ExtResource("11_f6av1")

[node name="Back" type="Button" parent="OptionsMenu"]
offset_left = 786.0
offset_top = 509.0
offset_right = 836.0
offset_bottom = 540.0
focus_neighbor_top = NodePath("../Resolutions")
text = "BACK"
flat = true

[node name="MasterAudio" type="HSlider" parent="OptionsMenu"]
offset_left = 314.0
offset_top = 165.0
offset_right = 765.0
offset_bottom = 214.0
focus_neighbor_bottom = NodePath("../FullScreen")
theme_override_icons/grabber = ExtResource("12_s5cak")
theme_override_icons/grabber_highlight = ExtResource("12_s5cak")
theme_override_icons/grabber_disabled = ExtResource("12_s5cak")
theme_override_styles/slider = SubResource("StyleBoxTexture_m61ad")
theme_override_styles/grabber_area = SubResource("StyleBoxTexture_6t2id")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxTexture_e8gl7")
min_value = -70.0
max_value = -12.0
value = -12.0

[node name="Label" type="Label" parent="OptionsMenu/MasterAudio"]
layout_mode = 0
offset_left = -101.0
offset_top = 13.0
offset_right = -48.0
offset_bottom = 40.0
theme_override_fonts/font = ExtResource("15_m6jkk")
theme_override_font_sizes/font_size = 25
text = "AUDIO"

[node name="FullScreen" type="CheckBox" parent="OptionsMenu"]
offset_left = 310.0
offset_top = 200.0
offset_right = 481.0
offset_bottom = 283.0
focus_neighbor_top = NodePath("../MasterAudio")
focus_neighbor_bottom = NodePath("../Resolutions")
theme_override_fonts/font = ExtResource("15_m6jkk")
theme_override_icons/checked = ExtResource("15_tms6e")
theme_override_icons/checked_disabled = ExtResource("15_tms6e")
theme_override_icons/unchecked = ExtResource("16_yrs21")
theme_override_icons/unchecked_disabled = ExtResource("16_yrs21")
text = "Full screen"
flat = true
expand_icon = true

[node name="Resolutions" type="OptionButton" parent="OptionsMenu"]
offset_left = 314.0
offset_top = 276.0
offset_right = 439.0
offset_bottom = 307.0
focus_neighbor_top = NodePath("../FullScreen")
focus_neighbor_bottom = NodePath("../Back")
theme_override_fonts/font = ExtResource("15_m6jkk")
theme_override_styles/focus = SubResource("StyleBoxTexture_e3eux")
theme_override_styles/normal = SubResource("StyleBoxTexture_av23h")
theme_override_styles/hover = SubResource("StyleBoxTexture_hbgu4")
theme_override_styles/disabled = SubResource("StyleBoxTexture_v8ren")
alignment = 1
icon_alignment = 1
item_count = 5
selected = 1
popup/item_0/text = "640x480"
popup/item_0/id = 0
popup/item_1/text = "1280x720"
popup/item_1/id = 1
popup/item_2/text = "1600x900"
popup/item_2/id = 2
popup/item_3/text = "1920x1080"
popup/item_3/id = 3
popup/item_4/text = "2560x1440"
popup/item_4/id = 4

[node name="Label" type="Label" parent="OptionsMenu/Resolutions"]
layout_mode = 0
offset_left = -137.0
offset_top = 6.0
offset_right = -9.99997
offset_bottom = 33.0
theme_override_fonts/font = ExtResource("15_m6jkk")
theme_override_font_sizes/font_size = 25
text = "Window size"

[connection signal="focus_entered" from="MenuInicial/StartButton" to="." method="_on_start_button_focus_entered"]
[connection signal="focus_exited" from="MenuInicial/StartButton" to="." method="_on_start_button_focus_exited"]
[connection signal="mouse_entered" from="MenuInicial/StartButton" to="." method="_on_start_button_mouse_entered"]
[connection signal="mouse_exited" from="MenuInicial/StartButton" to="." method="_on_start_button_mouse_exited"]
[connection signal="pressed" from="MenuInicial/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="focus_entered" from="MenuInicial/Options" to="." method="_on_options_focus_entered"]
[connection signal="focus_exited" from="MenuInicial/Options" to="." method="_on_options_focus_exited"]
[connection signal="mouse_entered" from="MenuInicial/Options" to="." method="_on_options_mouse_entered"]
[connection signal="mouse_exited" from="MenuInicial/Options" to="." method="_on_options_mouse_exited"]
[connection signal="pressed" from="MenuInicial/Options" to="." method="_on_options_pressed"]
[connection signal="focus_entered" from="MenuInicial/ExitGame" to="." method="_on_exit_game_focus_entered"]
[connection signal="focus_exited" from="MenuInicial/ExitGame" to="." method="_on_exit_game_focus_exited"]
[connection signal="mouse_entered" from="MenuInicial/ExitGame" to="." method="_on_exit_game_mouse_entered"]
[connection signal="mouse_exited" from="MenuInicial/ExitGame" to="." method="_on_exit_game_mouse_exited"]
[connection signal="pressed" from="MenuInicial/ExitGame" to="." method="_on_exit_game_pressed"]
[connection signal="pressed" from="OptionsMenu/Back" to="." method="_on_back_pressed"]
[connection signal="focus_entered" from="OptionsMenu/MasterAudio" to="." method="_on_master_audio_focus_entered"]
[connection signal="toggled" from="OptionsMenu/FullScreen" to="." method="_on_full_screen_toggled"]
[connection signal="item_selected" from="OptionsMenu/Resolutions" to="." method="_on_resolutions_item_selected"]
